==> haseebzaib/AutomaticRelaySwitch_According_To_AzanTiming/RelaySwitching/modules/ssd1306/ssd1306.c <==
#define DT_DRV_COMPAT zephyr_ssd1306
#include <zephyr/device.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/i2c.h>
#include <ssd1306.h>
#include <zephyr/kernel.h>
#include <zephyr/logging/log.h>
#include <zephyr/sys/timeutil.h>
#include <zephyr/sys/util.h>
#include <time.h>

int ssd1306_WriteCommand(const struct device *dev,uint8_t byte)
{
    const struct ssd1306_config *cfg = dev->config;
	int ret = i2c_burst_write_dt(&cfg->i2c,0x00,&byte,1);
	return ret;
}

int ssd1306_WriteData(const struct device *dev,uint8_t* buffer, size_t buff_size)
{
   const struct ssd1306_config *cfg = dev->config;
	int ret = i2c_burst_write_dt(&cfg->i2c,0x40,buffer,buff_size);
	return ret;
}

static int ssd1306_Init(const struct device *dev)
{
int stat = 0;
	if(ssd1306_check_device_exists(dev))
	{
		stat = 1;
		goto err;
	}


    // Reset OLED
    ssd1306_Reset(dev);

    // Wait for the screen to boot
    k_msleep(100);

    // Init OLED
    ssd1306_SetDisplayOn(dev,0); //display off

    ssd1306_WriteCommand(dev,0x20); //Set Memory Addressing Mode
    ssd1306_WriteCommand(dev,0x00); // 00b,Horizontal Addressing Mode; 01b,Vertical Addressing Mode;
                                // 10b,Page Addressing Mode (RESET); 11b,Invalid

    ssd1306_WriteCommand(dev,0xB0); //Set Page Start Address for Page Addressing Mode,0-7

#ifdef SSD1306_MIRROR_VERT
    ssd1306_WriteCommand(dev,0xC0); // Mirror vertically
#else
    ssd1306_WriteCommand(dev,0xC8); //Set COM Output Scan Direction
#endif

    ssd1306_WriteCommand(dev,0x00); //---set low column address
    ssd1306_WriteCommand(dev,0x10); //---set high column address

    ssd1306_WriteCommand(dev,0x40); //--set start line address - CHECK

    ssd1306_SetContrast(dev,0xFF);

#ifdef SSD1306_MIRROR_HORIZ
    ssd1306_WriteCommand(dev,0xA0); // Mirror horizontally
#else
    ssd1306_WriteCommand(dev,0xA1); //--set segment re-map 0 to 127 - CHECK
#endif

#ifdef SSD1306_INVERSE_COLOR
    ssd1306_WriteCommand(dev,0xA7); //--set inverse color
#else
    ssd1306_WriteCommand(dev,0xA6); //--set normal color
#endif

// Set multiplex ratio.
#if (SSD1306_HEIGHT == 128)
    // Found in the Luma Python lib for SH1106.
    ssd1306_WriteCommand(dev,0xFF);
#else
    ssd1306_WriteCommand(dev,0xA8); //--set multiplex ratio(1 to 64) - CHECK
#endif

#if (SSD1306_HEIGHT == 32)
    ssd1306_WriteCommand(dev,0x1F); //
#elif (SSD1306_HEIGHT == 64)
    ssd1306_WriteCommand(dev,0x3F); //
#elif (SSD1306_HEIGHT == 128)
    ssd1306_WriteCommand(dev,0x3F); // Seems to work for 128px high displays too.
#else
#error "Only 32, 64, or 128 lines of height are supported!"
#endif

    ssd1306_WriteCommand(dev,0xA4); //0xa4,Output follows RAM content;0xa5,Output ignores RAM content

    ssd1306_WriteCommand(dev,0xD3); //-set display offset - CHECK
    ssd1306_WriteCommand(dev,0x00); //-not offset

    ssd1306_WriteCommand(dev,0xD5); //--set display clock divide ratio/oscillator frequency
    ssd1306_WriteCommand(dev,0xF0); //--set divide ratio

    ssd1306_WriteCommand(dev,0xD9); //--set pre-charge period
    ssd1306_WriteCommand(dev,0x22); //

    ssd1306_WriteCommand(dev,0xDA); //--set com pins hardware configuration - CHECK
#if (SSD1306_HEIGHT == 32)
    ssd1306_WriteCommand(dev,0x02);
#elif (SSD1306_HEIGHT == 64)
    ssd1306_WriteCommand(dev,0x12);
#elif (SSD1306_HEIGHT == 128)
    ssd1306_WriteCommand(dev,0x12);
#else
#error "Only 32, 64, or 128 lines of height are supported!"
#endif

    ssd1306_WriteCommand(dev,0xDB); //--set vcomh
    ssd1306_WriteCommand(dev,0x20); //0x20,0.77xVcc

    ssd1306_WriteCommand(dev,0x8D); //--set DC-DC enable
    ssd1306_WriteCommand(dev,0x14); //
    ssd1306_SetDisplayOn(dev,1); //--turn on SSD1306 panel
    k_msleep(100);
    // Clear screen
    ssd1306_Fill(dev,Black);
    
    // Flush buffer to screen
    ssd1306_UpdateScreen(dev);
    
    // Set default values for screen object
    SSD1306.CurrentX = 0;
    SSD1306.CurrentY = 0;
    
    SSD1306.Initialized = 1;

    
err:
	return stat;
}
